src/objects/Payment_Plan_Contract__c.object
<CustomObject>
    <description>Payment Plan Contracts for previous resident that enter into payment arrangements before the file is electronically sent to FCO for collections.</description>
    <fields>
        <fullName>AccountLateCount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountLateCount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Contracts (AccountLateCount)</relationshipLabel>
        <relationshipName>Payment_Plan_Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Balance_Due__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Balance Due- add write offs</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Contracts (Account Balance Due- add write offs)</relationshipLabel>
        <relationshipName>Payment_Plan_Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_NSF_Count__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account NSF Count</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Contracts (Account NSF Count)</relationshipLabel>
        <relationshipName>Payment_Plan_Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Write_Offs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Write Offs</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Contracts (Account Write Offs)</relationshipLabel>
        <relationshipName>Payment_Plan_Contracts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Contracts</relationshipLabel>
        <relationshipName>Payment_Plan_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_10__c</fullName>
        <inlineHelpText>Amount due on the 10th agreed upon due date.  After this amount is submitted and posted in MRI, check the corresponding box and the &apos;Total Due&apos; box will be reduced by this amount.</inlineHelpText>
        <label>Amount 10</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_11__c</fullName>
        <inlineHelpText>Amount due on the 11th agreed upon due date.  After this amount is submitted and posted in MRI, check the corresponding box and the &apos;Total Due&apos; box will be reduced by this amount.</inlineHelpText>
        <label>Amount 11</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_12__c</fullName>
        <inlineHelpText>Amount due on the 12th agreed upon due date.  After this amount is submitted and posted in MRI, check the corresponding box and the &apos;Total Due&apos; box will be reduced by this amount.</inlineHelpText>
        <label>Amount 12</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specific Contact of the account that agreed to and signed the payment plan contract.  Note: If you have more than one signature, only one need be entered here.  When possible, use the Primary resident.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Plan Contracts (Contact)</relationshipLabel>
        <relationshipName>Payment_Plan_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_10__c</fullName>
        <inlineHelpText>Date 10th payment is due to AVB.</inlineHelpText>
        <label>Date 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_11__c</fullName>
        <inlineHelpText>Date 11th payment is due to AVB.</inlineHelpText>
        <label>Date 11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_12__c</fullName>
        <inlineHelpText>Date 12th payment is due to AVB.</inlineHelpText>
        <label>Date 12</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPC_Comments__c</fullName>
        <inlineHelpText>Enter any comments that will help a user to quickly identify specifics and or circumstances of this contract. Any dates/amounts to be entered in date/amount fields.</inlineHelpText>
        <label>PPC Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Received_10__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click checkbox when payment is received.</inlineHelpText>
        <label>Received 10 ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_11__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click checkbox when payment is received.</inlineHelpText>
        <label>Received 11 ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_12__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click checkbox when payment is received.</inlineHelpText>
        <label>Received 12 ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signatures_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if signatures have been received by all parties listed on contract.</inlineHelpText>
        <label>Signatures Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Current Status of Payment Plan Contract</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid In Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Due__c</fullName>
        <formula>(Amount_13__c  - IF( Received_13__c = true,  Amount_13__c , 0) )
+ (Amount_12__c  - IF( Received_12__c = true,  Amount_12__c , 0) )
+ (Amount_11__c  - IF( Received_11__c = true,  Amount_11__c , 0) )
+ (Amount_10__c  - IF( Received_10__c = true,  Amount_10__c , 0) )
+ (Amount_9__c  - IF( Received_9__c = true,  Amount_9__c , 0) )
+ (Amount_8__c  - IF( Received_8__c = true,  Amount_8__c , 0) )
+ (Amount_7__c  - IF( Received_7__c = true,  Amount_7__c , 0) )
+ (Amount_6__c  - IF( Received_6__c = true,  Amount_6__c , 0) )
+ (Amount_5__c  - IF( Received_5__c = true,  Amount_5__c , 0) )
+ (Amount_4__c  - IF( Received_4__c = true,  Amount_4__c , 0) )
+ (Amount_3__c  - IF( Received_3__c = true,  Amount_3__c , 0) )
+ (Amount_2__c  - IF( Received_2__c = true,  Amount_2__c , 0) )
+ (Amount_1__c  - IF( Received_1__c = true,  Amount_1__c , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Collections</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPC-{00000}</displayFormat>
        <label>Payment Plan Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>